--- a/study.html
+++ b/study.html
@@ -61,6 +61,51 @@
                 </form>
             </div>
         </header>
+
+        <main>
+            <article  class="teacher-item">
+                <header><img src="https://avatars1.githubusercontent.com/u/2254731?s=120&v=4" alt="Diego Fernandes">
+                    <div>
+                        <strong>Diego Fernandes</strong>
+                        <span>Química</span>
+                    </div>
+                </header>
+
+                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório 
+                    e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.
+                </p>
+
+                <footer>
+                    <p>Preço/hora<strong>R$ 20,00</strong>
+                    </p>
+                    <button type="button">
+                        <img src="images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                    </button>
+                </footer>
+            </article>
+
+            <article class="teacher-item">
+                <header><img src="https://avatars1.githubusercontent.com/u/2254731?s=120&v=4" alt="Diego Fernandes">
+                    <div>
+                        <strong>Diego Fernandes</strong>
+                        <span>Química</span>
+                    </div>
+                </header>
+
+                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório 
+                    e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.
+                </p>
+
+                <footer>
+                    <p>Preço/hora<strong>R$ 20,00</strong>
+                    </p>
+                    <button type="button">
+                        <img src="images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                    </button>
+                </footer>
+            </article>
+
+        </main>
     </div>  
   
 </body>
