--- a/study.html
+++ b/study.html
@@ -5,8 +5,14 @@
         <meta name="wiewport" content="width=device-width, initial-scale=1.0">
         <title>Proffy | Sua plataforma de estudos online</title>
 
+        <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+
         <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/partials/header.css">
+        <link rel="stylesheet" href="/styles/partials/forms.css">
         <link rel="stylesheet" href="/styles/partials/page-study.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
         
     </head>
@@ -85,19 +91,42 @@
             </article>
 
             <article class="teacher-item">
-                <header><img src="https://avatars1.githubusercontent.com/u/2254731?s=120&v=4" alt="Diego Fernandes">
+                <header><img src="https://avatars2.githubusercontent.com/u/6643122?s=460&u=1e9e1f04b76fb5374e6a041f5e41dce83f3b5d92&v=4" alt="Maik Brito">
                     <div>
-                        <strong>Diego Fernandes</strong>
-                        <span>Química</span>
+                        <strong>Maik Brito</strong>
+                        <span>Educação Física</span>
                     </div>
                 </header>
 
-                <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório 
-                    e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.
+                <p>Instrutor de Educação Física para iniciantes, minha missão de vida é levar saúde e contribuir para o crescimento de quem se interessar.</p> <br>
+
+                <p>Comecei a minha jornada profissional em 2001, quando meu pai me deu dois alteres de 32kg com a seguinte condição: "Aprenda a fazer dinheiro com isso!"
                 </p>
 
                 <footer>
-                    <p>Preço/hora<strong>R$ 20,00</strong>
+                    <p>Preço/hora<strong>R$ 40,00</strong>
+                    </p>
+                    <button type="button">
+                        <img src="images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                    </button>
+                </footer>
+            </article>
+
+            <article class="teacher-item">
+                <header><img src="https://media-exp1.licdn.com/dms/image/C4E03AQHfarmcSLlWtA/profile-displayphoto-shrink_200_200/0?e=1602115200&v=beta&t=kp57Leis9izzzuJRa0Kfu-nsz_mW1RNnO0wWtQCbG-s" alt="Tiago Luchtemberg">
+                    <div>
+                        <strong>Tiago Luchtemberg</strong>
+                        <span>Geografia</span>
+                    </div>
+                </header>
+
+                <p>As vezes não sei nem onde eu tô, mas consigo me localizar facilmente em qualquer lugar. Tenho memória fotográfica e nunca fico perdido.</p> <br>
+
+                <p>Eu ensino a galera como não se perder na vida, com lições geográficas simples pra você nunca mais precisar de mapa na sua bela vida.
+                </p>
+
+                <footer>
+                    <p>Preço/hora<strong>R$ 360,00</strong>
                     </p>
                     <button type="button">
                         <img src="images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
